apps/architecture-portal/versioned_docs/version-1.0.50.0/core/modules/audio-runtime.mdx
---
title: Audio Runtime
area: core
status: implemented
owners: [core, audio]
module: audio-runtime
source_paths: [packages/audio-runtime, tests/core/audio]
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';
import {DiagramFrame} from '@site/src/components/DiagramFrame';

<BuildIdentity kind="modules" id="audio-runtime" />

<DiagramFrame title="Audio Runtime Module" diagramId="audio-runtime" />

## 1. 目的与非职责
准备样本、调度 Pattern/Pad 事件并离线或实时渲染；不修改 Project Truth。
## 2. 当前实现状态
Audio Runtime `3.1.0` 已实现 Prepared Sample Bank、per-Pad playback、四种触发模式、Voice state、Realtime Engine、Offline Renderer，以及整数 BPM transport anchor、Bar-boundary notification 和 Pattern origin。Prepared PCM 不再设置单 Pad 帧数上限：64 个 Pad Slot 各自持有独立的可变长 `std::vector<float>`，每个 16-Pad user Bank 使用独立字节账本，同时受 generation 总账本约束；无需 PCM arena 或 offset table。resident bytes 由 publication owner 另行核算。当前 source 以 32 位 atomic slot-token mailbox 线性化 immutable Pattern publication：control 只取代尚未被 callback claim 的同 Project/Pattern/next-Bar view；不同 Pattern 默认拒绝，只有同时匹配 pending generation、源 Pattern 与 activation frame 的 Sequence switch/Stop authority 才可替换或取消。已 claim 的 view 保留原 boundary，较新的 view 从 claimed activation/BPM Bar length 重算到下一 Bar；slot token 的 bit 31 表示 claimed，完整 64 位 generation 保存在不可变槽内；保留原有 2^63 耗尽边界并 fail closed，不循环复用外部身份。实时线程只消费不可变 Runtime Snapshot 与固定队列，不执行 quantization、Project mutation 或 journal I/O。本版新增固定八段 master FX 链：`kFxChainOrder` 的顺序恒为 filter → delay → reverb → stutter → gate → reverse → crush → cutter，每段状态是 `{value, engaged, frozen}`，链级另有一个 HOLD 位冻结全链当前形态。所有 FX 取值共享 0..1000 的整数值域（`kMasterFxValueMaximum = 1000`）。`MasterFxChain` 暴露 `prepare / reset / set_bpm(bpm) / apply_gesture(FxGesture) / process(left, right, frames)`；stutter、cutter 与 delay 的周期全部由 `master_fx_bar_frames(sample_rate, bpm)` 与各自的 divisor 表从 Bar 推导，因此 FX 时值跟随整数 BPM transport anchor，而不是墙钟时间。`RealtimeEngine` 相应新增 `prepare_master_fx(bpm)`（控制线程、quiescent，一次性分配全部 FX 渲染存储）、`enqueue_fx_gesture`/`enqueue_master_fx_tempo(bpm)`、有界的 `MasterFxControlKind {gesture, tempo}` 控制通道、`FxEnqueueResult`（`accepted`、`invalid_fx`、`invalid_value`、`invalid_bpm`、`not_prepared`、`not_running`、`queue_full`）与 `master_fx_telemetry()`、`master_fx_processed_frames_`。既有实时不变量完全不变：实时回调仍不分配、不加锁、不修改 Project、不做量化、不做 journal I/O；FX 缓冲在准备阶段一次分配完毕，手势与 tempo 只经由有界控制通道到达。
## 3. 所有权与依赖
依赖 Foundation 与 Project Cooker；平台输出位于适配边界。
## 4. 架构与数据流
Runtime Snapshot + 可选 pending overlay → immutable Prepared Pattern slot → atomic32 slot-token mailbox claim → fixed SPSC control 与 Voice-state/Bar-boundary 队列 → Bar-boundary apply → master FX 链 → 输出 sink；preview、overlay、transport anchor 与 master FX 状态只属于 Runtime，不进入 Project Truth。FX 手势与 tempo 更新走同一条独立的有界 master FX 控制通道，与 trigger/control 通道同为单生产者单消费者；tempo 更新与手势保持顺序，并在下一个渲染量子边界生效。
## 5. API 与 Artifact 边界
消费不可变快照、resolved playback 与已准备样本，不在实时回调解析 Project/WAV、分配内存、加锁或调用 Host。`kRealtimeMaximumSampleFrames` 明确实时样本、playback 与 Voice-state 共用的无符号 32 位帧域；批准的 16,777,216 帧单 Pad 在 trim、loop、ramp 和事件回报中不发生中间收窄。master FX 只接受 trivially copyable 的 `FxGesture`（`kind` ∈ engage/move/release/hold_on/hold_off、`fx`、`value`），不接受 Project、Performance 或 Host 对象；`MasterFxTelemetry` 只回报 enqueued/dequeued/queued gesture、queue drop、processed frames、tempo 更新计数与 current BPM，不回报创作真相。
## 6. 状态、错误与并发
atomic32 claimed marker 管理 callback ownership，外部 authority 仍校验完整 generation、Pattern identity 与 activation frame。音频通过 RMW 的即时前值取得槽位；控制替换或取消与 claim 以原子转换决胜。已取消的 audio-owned 槽仍由音频本地 entry 保护，待音频释放后才能由控制线程回收，避免槽号复用造成 ABA。音频在 claim 前单方关闭控制写入 admission，完成交接后重开；控制只在非实时路径重新观察并重算 boundary，音频不等待控制确认。不同 BPM 的 claimed view 仍是后续 boundary 的 transport authority。固定 SPSC 队列和压力测试覆盖 control/Voice 并发，旧 Pattern slot 只由 control thread reclaim，callback 不析构 view，overflow fail closed，实时路径避免无界工作。`pending_publications` 显式计数 audio-owned A 与同时 queued B 两个不同 generation；每个 accepted Pattern publication 恰好落入 applied、superseded、canceled 或 pending。取消后的 audio-owned slot 后续被 callback 回收时不会重复计为 superseded；quiescent `stop()` 将 queued-only、audio-owned-only 或两者各计一次 canceled，且这些累计 counter 跨 `start()` 保留。deterministic race hooks 只存在于 private testable library；production archive/callback 无 hook symbol、marker、pointer atomic 或 branch。master FX 沿用同一纪律：控制线程是 FX 控制通道的唯一生产者，队列满时确定性返回 `queue_full` 而非阻塞或增长；`prepare_master_fx` 之前 enqueue 返回 `not_prepared`，未运行时返回 `not_running`。BPM 更新只改变周期推导的 rate，不在实时线程重新分配缓冲。
累计计数、帧位置与 epoch 保留 64 位。音频、控制各自发布固定三缓冲值快照；多个非实时遥测读者只在读者之间互斥，音频完全不接触该锁。调度使用独立的 control-only transport 读取通道，在原 callback 起始前沿与 Pattern origin 交接点发布，不被遥测读者占用。Pattern 遥测只读取值副本，以认领前沿和精确取消身份排除已应用／已取消的旧 pending 记录，不读取可回收槽。所有相关写操作静止并与读者正确同步后，最终统计精确，无需再来一次 callback；运行中跨域仍是 best effort。`start/stop` 沿用 callback 排空要求，不能只看 stopped；交接时正常发布新值，不重置读者可能仍持有的三缓冲槽。输入和 FX 占用以 32 位原子保留原先的预留／回滚顺序，上界包含队列 1024 项及各一项在途生产者、消费者，合计 1026。64-Pad mask 保持完整 64 位，由 Bank pending-zero 的 release/acquire 交接保护。

发布按 current/pending/retiring/reclaimable 状态转移：实时线程只读不可变 Bank，最后一个 Voice 结束后才允许控制线程回收。publication owner 按 reclaim → reserve → publish 顺序核算 live、pending、retiring bytes。准备阶段按剩余字节的较小约束判定失败，约束相等时稳定返回 Bank failure；Bank、generation 与 transient residency 三类失败不互相冒充。Web Audio 的每个有效 callback（包括 paused callback）以 lock-free `uint32` heartbeat 表示活性；Browser Main 在 `AudioContext.resume()` 后必须先观察 heartbeat 前进，才请求打开 realtime gate。激活只在 accepted generation 已成为 current 且无 pending publication 时开启 gate；激活前锁存的 generation 由首个 open-gate callback 精确确认，避免 stop/start 或 suspend/resume 把旧的非零 acknowledgement 当作当前 Bank。
Voice-state ring 内部使用自然对齐的紧凑 cell，入队／出队按字段复制，保留公开
`RuntimeVoiceStateEvent` 的成员顺序和完整 64-bit sequence/runtime frame、32-bit
source frame。容量仍为 10,240；通用 SPSC 索引与内存序、满队列损坏状态、拒绝新
Voice 和 fail-closed drain 语义不变。当前队列存储在 Engine 构造时独立分配，
不是 render 中的动态扩容。`RealtimeEngine` 的 C++ 对象大小变化要求所有二进制消费者一致重编；
公开事件 ABI 不变不代表 Engine ABI 不变，后续 Package 分配须处理 MAJOR 影响。

## 7. 产品使用方
Native Host 与未来正式平台 Host 通过 Facade/适配层使用。

Runtime-only Facade 的 T3 source 使用 `PreparedPatternView::from_canonical_snapshot`：
严格拒绝重复或乱序 event key，保留全部 timing/material 验证，不建立桌面 overlay
merge 的 map workspace；既有 `from_snapshot` 和 overlay 规范化语义不变。
`consumed_controls_audio` 只允许音频消费者或 quiescent owner 读取，供 Facade 在
render 后发布精确消费序号，不是任意线程遥测，也不把消费次数当作已发声次数。
Facade 自有 OPEN/BUSY admission 屏障排空 Core render 后才调用 Engine stop/unload；
Engine 原来的 quiescence 前置条件没有弱化。该窄路径只准备 Pattern/Pad，不调用
Master FX prepare；嵌入 Engine 的固定 FX 对象仍计入固定成本。

### Voice-state 的回执有界存储

默认 Engine 构造仍保留 10240 条 Voice-state 容量。显式
`ReceiptBoundedVoiceStates` 构造选择固定 2176 条，仅供满足回执约束的调用方：
最多 1024 条命令从接收直到回执取走一直占用 pending 名额；先 acquire render
消费位置，再 drain Voice states，最后归还名额。每条命令至多两个状态事件，
加上最多 128 个既有 Voice 的结束事件，得到 `2 × 1024 + 128` 的上界。
Pattern/replay/audition 不进入此状态流；release tail 不重复发布结束事件。

Runtime Facade 显式采用该模式；桌面/Performance 调用方默认不变。两个模式都在
控制侧构造时一次分配完整固定 SPSC 队列，期间不切换、不截断、不缩窄字段；
资源不足可以使构造抛出异常，Facade load 将其转为 allocation_failed 并保留 empty。
回调不分配、不释放、不加锁；析构仍要求 quiescence。预算必须同时计入 Engine
对象和独立队列，allocator overhead 另属平台 reserve。选用较小模式但违反回执
约束的 Core 调用方仍会触发原有 corrupted/fail-closed，不会静默覆盖事件。

单元测试锁定两种精确容量和全宽字段；组件测试覆盖 128 个旧 Voice 结束加
1024 次短音的恰好 2176 条未读状态、队列满重试和部分回执。并发测试覆盖实际
存储分支以及 render 与满额命令/部分 poll 的交错。这些源码测试不代表真机音频验收。

### Capture 缓冲按需准备

当前 source 的 Capture ring 不再嵌入 Engine；未请求录制时没有 ring allocation。
`prepare_capture()` 在串行控制线程上幂等申请原有 4096-event 容量，不改变 Capture
状态；返回 false 表示内存不足。Native 在创建 Sequence 会话前执行该预检。
现有 `arm_capture()` 仍可直接调用并隐式准备；申请失败返回 `internal_error`，
message 为空、details 为 null，避免 `noexcept` 错误路径再次分配内存。
失败不改变 running/idle 状态，播放继续，后续可重试。

存储在 release 发布 `arm_pending` 前完整初始化；音频 acquire 状态后才能写入。
指针只初始化一次，不在运行期间替换。disarm/stop 保留未读事件与已申请存储；
quiescent start 沿用清空旧队列的语义，最终由 quiescent Engine 析构释放。
回调仍然不申请或释放内存。启用录制后的完整缓冲成本未减少；冷态节省不等于
ESP32 可用堆、整机适配或实时 deadline 通过。该 additive API 与 B2 T2/T3 一同
现已在本次 integration 分配匹配的 Module/Assembly 身份。

## 8. 测试与证据
Realtime、same-boundary overlay supersession、apply-point 精确 switch/Stop replacement authority、queued/audio-owned/stop cancellation、two-pending `accepted = applied + superseded + canceled + pending_publications` conservation stress、offline、sample bank、queue 与 CoreAudio output 测试；`audio.realtime_engine` 覆盖 16,777,216 帧高位 trim/loop/ramp，`audio.long_sample_publication_stress` 在并发渲染下覆盖 64 MiB 单 Pad、128 MiB generation、256 MiB resident 边界与字节精确回收。Web Audio conformance 还覆盖 live Bank exact acknowledgement 与最新 generation 的 suspend/reactivate acknowledgement。master FX 由 `audio.master_fx`、`audio.master_fx_determinism` 与 `audio.master_fx_allocation_guard` 覆盖链顺序、值域、HOLD、Bar 相对周期、相同输入相同输出与实时路径的无分配保证；`audio.master_fx_stress` 属于 stress tier，覆盖控制通道在并发渲染下的有界行为。该 busy-spin 用例仅属于 stress tier，并从 coverage preset 排除。`audio.value_channel` 验证 64 位进位、读者半途暂停时连续发布与重置、最终值及多读者串行；Realtime component 的确定性交错覆盖 Q/P/C 占用、Pad 0/63 handoff、同槽高位 generation 复用、无下一 callback 的取消结果及 admission 重算边界。Snapshot stress 同时运行四个观察者并覆盖 start/stop 写者交接。物理延迟与 Safari 内存验收单列。
`audio.realtime_queue` 另行锁定紧凑 Voice-state 存储、完整字段边界、精确容量、
FIFO、wraparound、失败 pop 不修改输出与静止 clear/reuse；既有
`audio.realtime_spsc_stress` 增加一百万次紧凑事件并发传输而不减少原有工作量。
目标对象大小只属于编译器布局证据，不是板上可用堆或完整运行时适配通过。
Capture component 覆盖首次申请、持续 OOM 下的无分配错误、重试、stop 后 drain 与
restart 复用；SPSC stress 在 renderer 已运行后首次 arm，逐个核对完整事件与
`capture_origin_frame + frame_offset` 的绝对帧身份。Native 的独立测试进程通过
allocator interposition 验证失败不创建 session、播放继续及相同身份重试持久化。

## 9. 限制与下一门禁
自动化绿色不证明 MIDI/iPad/扬声器体验；需保留设备视频和测量证据。无锁 atomic32 与对象级 Xtensa 编译不等于完整 ESP-IDF 链接或目标实时支持；ESP32 的 map/size、VFS、真机输出、deadline、jitter 与 underrun 证据分别验证，不能由主机测试推断。
## 10. 版本身份
Module 版本由清单生成，Product Build 由 Assembly 固定。

本次集成已为 Audio Runtime 的 Engine ABI 变更及其依赖重建分配匹配版本，当前身份以上方 Build Identity 为准。Slice 参考注册不改变 Audio Runtime 的实时职责或默认执行权限。
